--- a/.infrastructure/confgiMap.yml
+++ b/.infrastructure/confgiMap.yml
@@ -2,7 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: app-config
-  namespace: todo
+  namespace: todoapp
 data:
   PYTHONUNBUFFERED: "1"
-  
