--- a/.infrastructure/deployment.yml
+++ b/.infrastructure/deployment.yml
@@ -29,7 +29,7 @@ spec:
             cpu: "150m"
         env:
         - name: PYTHONUNBUFFERED
-          valueForm:
+          valueFrom:
             configMapKeyRef:
               name: app-config
               key: PYTHONUNBUFFERED
